
    <resources>
        <string name="app_name">AndroidAuth</string>
        <string name="firebase_fitness_login">Firebase Fitness Login</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="create_account">Create Account</string>
        <string name="login">Login</string>
        <string name="google_signin">Sign In With Google</string>
        <string name="phone_signin">Sign In With Phone</string>
        <string name="guest_signin">Continue as Guest</string>
        <string name="forgot_password">Forgot Password?</string>
    </resources>


